201807041
New receive menu to allow independent selection of DATV receive parameters
MPEG-2 DATV receive capability after purchase and installation of key
Programmable ADF4351 output during receive for upconverters
Direct transmit frequency entry from frequency selection menu
New "clear" key on keyboard to clear entry line
10-character locator used as basis for locator change
Old BATC Streamer removed from output menu.

201805151
Added new menu for Composite Video Output
More test cards and all video snaps available from video output
Sound pass-through for Comp Video out is routed to USB Audio
RTL-FM audio is routed to USB Audio if present (else RPi audio)
SnapView modified to access all video snaps
Added Locator range and bearing calculator
Menu modifications in preparation for future LimeSDR Mini support

201804251
Adds comprehensive RTL_FM voice receiver (see Menu 2)
Corrects Testrig for Stretch build
Corrects SigGen Express Cal above 2000 MHz
Rejects zero-length callsign
More visibility of DATV Express start-up
Reduces occurences of 90-sec shutdown wait in Stretch
Improves utils compile scripts

201804060
Repairs the linkage between frequency and band in the Console Menu
Element 14 7 inch Display improvements:
Does not erroneously load TonTec driver
Implements VideoView without flicker (but at 1.5 fps)
Allows cursor operation similar to a touchpad in FreqShow
Reduces info text size to fit

201804021
Adds support for Logitech C270 Webcam
Adds variable reset delay for webcams
Updated Test Rig software
Info screen improvements
Set Call, locator and PIDs from touchscreen
Set and select ADF Ref from touchscreen
Commence software update from touchscreen

201803270
This build forks to support Raspbian Stretch and the RPi3+
Adds Country to Wifi Script and uses ip commands
Change compile options for GUI apps
Change config for pygame install

201803181
Adds support for Logitech C910 Webcam

201803180
Handles Logitech C525 post-transmit reset better