@@ -9,7 +9,7 @@ rx0sdr=RTLSDR
 rx0graphics=ON
 rx0parameters=ON
 rx0sound=OFF
-rx0fastlock=ON
+rx0fastlock=OFF
 rx0label=Preset_1
 rx1frequency=146.5
 rx1sr=333
@@ -22,7 +22,7 @@ rx1sdr=RTLSDR
 rx1graphics=ON
 rx1parameters=ON
 rx1sound=OFF
-rx1fastlock=ON
+rx1fastlock=OFF
 rx1label=Preset_1
 rx2frequency=437
 rx2sr=1000
@@ -35,7 +35,7 @@ rx2sdr=RTLSDR
 rx2graphics=OFF
 rx2parameters=OFF
 rx2sound=OFF
-rx2fastlock=ON
+rx2fastlock=OFF
 rx2label=Preset_2
 rx3frequency=1255
 rx3sr=1000
@@ -48,7 +48,7 @@ rx3sdr=RTLSDR
 rx3graphics=OFF
 rx3parameters=OFF
 rx3sound=OFF
-rx3fastlock=ON
+rx3fastlock=OFF
 rx3label=Preset_3
 rx4frequency=71
 rx4sr=333
